# szyszka

./: .gitignore  BUILD_FLATPAK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  justfile
.github/workflows/: flatpak-release.yml  linux.yml  mac.yml  quality.yml  release.yml  windows.yml
data/: com.github.samfic.szyszka.desktop  com.github.samfic.szyszka.gresource.xml  com.github.samfic.szyszka.metainfo.xml
flatpak/: com.github.samfic.szyszka.yml
i18n/ar/: szyszka.ftl
i18n/cs/: szyszka.ftl
i18n/de/: szyszka.ftl
i18n/en/: szyszka.ftl
i18n/es/: szyszka.ftl
i18n/fr/: szyszka.ftl
i18n/it/: szyszka.ftl
i18n/ja/: szyszka.ftl
i18n/pl/: szyszka.ftl
i18n/pt/: szyszka.ftl
i18n/ru/: szyszka.ftl
i18n/sv/: szyszka.ftl
i18n/uk/: szyszka.ftl
i18n/zh/: szyszka.ftl
misc/cargo/: PublishSzyszka.sh
scripts/: check-msrv.sh  check-quality.sh  pre-push
src/: cli_arguments.rs  config.rs  files.rs  language.rs  localizer.rs  logger.rs  main.rs  state.rs
src/connect/: files.rs  mod.rs  progress.rs  renaming.rs  rules_ops.rs  select.rs  sync.rs  translations.rs
src/rule/: mod.rs  rule_add_number.rs  rule_add_text.rs  rule_change_size_letters.rs  rule_custom.rs  rule_normalize.rs  rule_purge.rs  rule_replace.rs  rule_trim.rs  rules.rs
src/ui/: dialogs.rs  main_window.rs  mod.rs  models.rs  rule_editor.rs  state_ui.rs  sync.rs  translations_ui.rs
ui/: common.slint  main.slint  rule_editor.slint
